--- a/scripts/load_body.html
+++ b/scripts/load_body.html
@@ -24,11 +24,11 @@
                     <i class="icon-ban-circle icon-white"></i>
                     <span>Cancel upload</span>
                 </button>
-<!--                <button type="button" class="btn btn-danger delete">
+                <button type="button" class="btn btn-danger delete">
                     <i class="icon-trash icon-white"></i>
                     <span>Delete</span>
-                </button>-->
-<!--                 <input type="checkbox" class="toggle"> -->
+                </button>
+                 <input type="checkbox" class="toggle">
             </div>
             <!-- The global progress information -->
             <div class="span5 fileupload-progress fade">
@@ -162,6 +162,7 @@
                 <i class="icon-trash icon-white"></i>
                 <span>{%=locale.fileupload.destroy%}</span>
             </button>
+<input type="checkbox" name="delete" value="1">
         </td>
     </tr>
 {% } %}
