--- a/scripts/load_body.html
+++ b/scripts/load_body.html
@@ -6,7 +6,7 @@
     The graphs generated with those files will be found <a href="$$url$$">here</a>.</p>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
-    <form id="fileupload" action="scripts/" method="POST" enctype="multipart/form-data">
+    <form id="fileupload" action="scripts/upload.class.php?customer=$$customer$$&host=$$host$$" method="POST" enctype="multipart/form-data">
         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
             <div class="span7">
@@ -167,6 +167,7 @@
     </tr>
 {% } %}
 </script>
+
 <!--<script id="template-download" type="text/x-tmpl">
 {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-download fade">
