--- a/scripts/load_body.html
+++ b/scripts/load_body.html
@@ -2,7 +2,7 @@
     <div class="page-header">
         <h1>Statistics parser</h1>
     </div>
-    <p class="block">Upload files for customer <b>$$customer$$</b>, from machine <b>$$host$$</b>.<br>
+    <p class="block_info">Upload files for customer <b>$$customer$$</b>, from machine <b>$$host$$</b>.<br>
     The graphs generated with those files will be found <a href="$$url$$">here</a>.</p>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
