--- a/scripts/load_body.html
+++ b/scripts/load_body.html
@@ -1,15 +1,12 @@
 <div class="container">
-    <div class="page-header">
+<!--     <div class="page-header"> -->
         <h1>Statistics parser</h1>
-    </div>
+<!--     </div> -->
     <p class="block_info">Upload files for customer <b>$$customer$$</b>, from machine <b>$$host$$</b>.<br>
     The graphs generated with those files will be found <a href="$$url$$">here</a>.</p>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
     <form id="fileupload" action="scripts/upload.class.php?customer=$$customer$$&host=$$host$$" method="POST" enctype="multipart/form-data">
-<!--     <form id="fileupload" action="//jquery-file-upload.appspot.com" method="POST" enctype="multipart/form-data"> -->
-        <!-- Redirect browsers with JavaScript disabled to the origin page -->
-        <noscript><input type="hidden" name="redirect" value="http://blueimp.github.com/jQuery-File-Upload/"></noscript>
         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
             <div class="span7">
